--- a/stylos/sass/body/_metas.scss
+++ b/stylos/sass/body/_metas.scss
@@ -1,13 +1,3 @@
-.inicio-metas {
-    font-size: 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: $tercer-color;
-}
-
-
-
 .contenido-prin {
         display: flex;
         flex-direction: row;
@@ -17,10 +7,13 @@
         overflow: hidden;
 }
 
-.imagen {
+.imagen:hover {
     height: 200px;
     width: 350px;   
     margin: 0 10px;
+    transition: transform;
+    transform: scale(1.1);
+    transition: all ease 0.9s;
 }
 
 .parrafo-main {
