--- a/stylos/sass/body/_presupuestos.scss
+++ b/stylos/sass/body/_presupuestos.scss
@@ -20,13 +20,13 @@
 
 }
 
-.info {
+.info  {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 20px 0;
     font-weight: 500;
-      a: {
+     a {
         text-decoration: none;
     }
 }
