--- a/stylos/style.css
+++ b/stylos/style.css
@@ -105,19 +105,6 @@
   margin-left: 5px;
 }
 
-.boton-inicio {
-  padding-top: 20px;
-}
-
-.aside-contacto {
-  font-size: 20px;
-  padding-top: 10px;
-  margin: 10px;
-  border-radius: 10px;
-  background-color: rgb(241, 240, 232);
-  border-color: rgba(11, 17, 14, 0.932);
-}
-
 .pie2 {
   text-align: center;
   border: none;
@@ -149,13 +136,6 @@
   background-color: rgb(241, 240, 232);
 }
 
-.tittle {
-  text-align: center;
-  color: rgba(245, 245, 245, 0.945);
-  padding-bottom: 20px;
-  font-size: 40px;
-}
-
 .card {
   height: 15rem !important;
 }
@@ -177,7 +157,9 @@
   justify-content: center;
   margin: 20px 0;
   font-weight: 500;
-  a-text-decoration: none;
+}
+.info a {
+  text-decoration: none;
 }
 
 .links {
@@ -204,14 +186,6 @@
 
 .footerPresupuesto {
   grid-area: footerPresupuesto;
-}
-
-.sobremi-tittle {
-  font-size: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  color: rgba(245, 245, 245, 0.945);
 }
 
 .sobre-mi {
@@ -274,14 +248,6 @@
   background-color: rgb(241, 240, 232);
 }
 
-.inicio-metas {
-  font-size: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  color: rgba(245, 245, 245, 0.945);
-}
-
 .contenido-prin {
   display: flex;
   flex-direction: row;
@@ -291,10 +257,13 @@
   overflow: hidden;
 }
 
-.imagen {
+.imagen:hover {
   height: 200px;
   width: 350px;
   margin: 0 10px;
+  transition: transform;
+  transform: scale(1.1);
+  transition: all ease 0.9s;
 }
 
 .parrafo-main {
@@ -305,15 +274,6 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-}
-
-.titulo-contacto {
-  font-size: 40px;
-  font-weight: 500;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  color: rgba(245, 245, 245, 0.945);
 }
 
 .contact-form {
@@ -374,6 +334,42 @@
   list-style: none;
   font-weight: 600;
   padding-top: 10px;
+}
+
+.tittle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgba(245, 245, 245, 0.945);
+  padding-bottom: 20px;
+  font-size: 40px;
+}
+
+.sobremi-tittle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgba(245, 245, 245, 0.945);
+  padding-bottom: 20px;
+  font-size: 40px;
+}
+
+.inicio-metas {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgba(245, 245, 245, 0.945);
+  padding-bottom: 20px;
+  font-size: 40px;
+}
+
+.titulo-contacto {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgba(245, 245, 245, 0.945);
+  padding-bottom: 20px;
+  font-size: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
