--- a/stylos/sass/footer/_footer.scss
+++ b/stylos/sass/footer/_footer.scss
@@ -21,6 +21,7 @@
             font-size: 25px;
             font-weight: 500;
             display: inline-block;
+            color: #000;
         }
     }
 } 
