--- a/stylos/sass/navbar/_navbar.scss
+++ b/stylos/sass/navbar/_navbar.scss
@@ -46,3 +46,14 @@
         transition: all ease 0.9s;
     }
 }
+
+@media screen and (min-height: 400px)  {
+   .navbar .paginas  {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 0px 40px;
+        margin: 10px 50px ;
+    }
+}
