--- a/stylos/sass/body/_metas.scss
+++ b/stylos/sass/body/_metas.scss
@@ -27,13 +27,13 @@
 }
 
 
-@media screen and (min-width:360px) and (max-width:600px) {
+@media screen and (max-width:365px)  {
     
     .imagen {
         height: 150px;
         width: 150px;
         .parrafo-main {
-            font-size: 8px;
+            font-size: 10px;
         }
     }
 }
