--- a/stylos/sass/body/_main.scss
+++ b/stylos/sass/body/_main.scss
@@ -1,16 +1,19 @@
 .layoutIndex {
- 
+
     display: grid;
     grid:
-      "main" 5fr
-      "footer" 1fr
-      / auto;
+        "main" 5fr "footer" 1fr / auto;
     gap: 8px;
-  }
-  
-  .mainIndex { grid-area: main; }
-  .footerIndex { grid-area: footer;
-    margin-top:auto; }
+}
+
+.mainIndex {
+    grid-area: main;
+}
+
+.footerIndex {
+    grid-area: footer;
+    margin-top: auto;
+}
 
 .aside-barra {
     font-size: 40px;
@@ -25,15 +28,42 @@
     margin-right: 20px;
     text-decoration: none;
     text-align: left;
+
     a {
         text-decoration: none;
         margin-left: 5px;
         color: $cuarto-color;
     }
-} 
+}
+
+.contenido1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 15px;
+    margin: 10px;
+    object-fit: contain;
+}
 
 
+.fotito {
+    height: 300px;
+    width: 450px;
+    display: flex;
+    justify-content: center;
+    -webkit-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+    -moz-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+    box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+}
 
+.parraf {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 10px;
+    font-weight: 600;
+    font-size: 15px;
+}
 
 .pie2 {
     text-align: center;
@@ -51,6 +81,7 @@
     list-style: none;
     margin: 5px;
     padding: 10px;
+
     li {
         a {
             padding: 30px 20px;
@@ -60,7 +91,7 @@
             display: inline-block;
         }
     }
-} 
+}
 
 
 .ultima-palabra {
