--- a/stylos/style.css
+++ b/stylos/style.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.navbar .logo {
+
+.logo {
   height: 100px;
   width: 100px;
   border-radius: 100%;
@@ -18,7 +19,8 @@
   justify-content: space-between;
   padding-bottom: 20px;
 }
-.ul-container .paginas {
+
+.paginas {
   font-family: "Montserrat", sans-serif;
   text-decoration: none;
   color: rgba(0, 0, 0, 0.986);
@@ -26,7 +28,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-.ul-container .paginas:hover {
+
+.paginas:hover {
   color: rgb(8, 224, 73);
   transition: all ease 0.9s;
 }
@@ -58,7 +61,7 @@
 
 .ultima-palabra {
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 400;
   text-align: center;
   background-color: rgb(241, 240, 232);
 }
@@ -105,6 +108,34 @@
   text-decoration: none;
   margin-left: 5px;
   color: rgba(0, 0, 0, 0.986);
+}
+
+.contenido1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 15px;
+  margin: 10px;
+  object-fit: contain;
+}
+
+.fotito {
+  height: 300px;
+  width: 450px;
+  display: flex;
+  justify-content: center;
+  -webkit-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+  box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+}
+
+.parraf {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 10px;
+  font-weight: 600;
+  font-size: 15px;
 }
 
 .pie2 {
@@ -279,57 +310,109 @@
   justify-content: flex-end;
 }
 
-@media screen and (min-width: 360px) and (max-width: 600px) {
+@media screen and (max-width: 365px) {
   .imagen {
     height: 150px;
     width: 150px;
   }
   .imagen .parrafo-main {
-    font-size: 8px;
+    font-size: 10px;
   }
 }
-.contact-form {
-  padding-bottom: 10px;
-  margin-left: 5px;
+.titulo2-contacto {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
+  color: rgba(78, 73, 73, 0.911);
+  font-size: 30px;
+  padding: 10px 0;
+  margin-left: 10px;
 }
 
-.contact-form__nombre {
-  border-radius: 20px;
-  border-color: rgb(63, 78, 79);
+.form {
+  width: 340px;
+  height: 440px;
+  background: #e6e6e6;
+  border-radius: 8px;
+  box-shadow: 0 0 40px -10px #000;
+  margin: calc(50vh - 220px) auto;
+  padding: 20px 30px;
+  max-width: calc(100vw - 40px);
+  box-sizing: border-box;
+  position: relative;
+}
+
+.llamame {
   margin: 10px 0;
+  padding-bottom: 10px;
+  width: 180px;
+  color: #78788c;
+  border-bottom: 3px solid #78788c;
 }
 
-.contact-form__apellido {
-  border-radius: 20px;
-  border-color: rgb(63, 78, 79);
-  margin: 10px 0;
+input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  background: none;
+  outline: none;
+  resize: none;
+  border: 0;
+  font-family: "Montserrat", sans-serif;
+  transition: all 0.3s;
+  border-bottom: 2px solid #bebed2;
 }
 
-.contact-form__email {
-  border-radius: 20px;
-  border-color: rgb(63, 78, 79);
-  margin: 10px 0;
+input:focus {
+  border-bottom: 2px solid #78788c;
 }
 
-.contact-form__telefono {
-  border-radius: 20px;
-  border-color: rgb(63, 78, 79);
-  margin: 10px 0;
+p:before {
+  content: attr(type);
+  display: block;
+  margin: 28px 0 0;
+  font-size: 14px;
+  color: #5a5a5a;
 }
 
-.button-final {
-  border-radius: 20px;
-  border: none;
-  padding-top: 10px;
+button {
+  float: right;
+  padding: 8px 12px;
+  margin: 8px 0 0;
+  font-family: "Montserrat", sans-serif;
+  border: 2px solid #78788c;
+  background: 0;
+  color: rgba(0, 0, 0, 0.986);
+  cursor: pointer;
+  transition: all 0.7s;
+}
+
+button:hover {
+  background: #78788c;
+  color: #fff;
+}
+
+.spa {
+  position: absolute;
+  bottom: -40px;
+  left: -2px;
+  background: #979596;
+  color: #fff;
+  width: 300px;
+  padding: 10px 4px 10px 0;
+  border-radius: 6px;
+  font-size: 13px;
+  box-shadow: 10px 10px 40px -14px #000;
+}
+
+span {
+  margin: 0 5px 0 15px;
 }
 
 .picture {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: start;
   margin-top: 10px;
 }
 
@@ -342,7 +425,7 @@
 .informacion {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   list-style: none;
   font-weight: 600;
   padding-top: 10px;
