--- a/stylos/sass/body/_main.scss
+++ b/stylos/sass/body/_main.scss
@@ -19,8 +19,9 @@
     font-size: 40px;
     text-align: center;
     margin: 20px 0;
-    color: whitesmoke;
+    color: $cuarto-color;
     font-weight: 600;
+    overflow-x: hidden;
 }
 
 .aside-adentro {
@@ -28,11 +29,13 @@
     margin-right: 20px;
     text-decoration: none;
     text-align: left;
+    overflow-x: hidden;
 
     a {
         text-decoration: none;
         margin-left: 5px;
         color: $cuarto-color;
+        overflow-x: hidden;
     }
 }
 
@@ -42,7 +45,8 @@
     justify-content: center;
     padding: 15px;
     margin: 10px;
-    object-fit: contain;
+    object-fit: cover;
+    overflow-x: hidden;
 }
 
 
@@ -51,9 +55,10 @@
     width: 450px;
     display: flex;
     justify-content: center;
-    -webkit-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
-    -moz-box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
-    box-shadow: 0px 0px 41px 2px rgba(0, 0, 0, 0.57);
+    border: 2px solid black;
+    border-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 
 .parraf {
@@ -63,6 +68,10 @@
     padding-top: 10px;
     font-weight: 600;
     font-size: 15px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .pie2 {
@@ -96,7 +105,7 @@
 
 .ultima-palabra {
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 400;
     text-align: center;
     background-color: rgb(241, 240, 232);
 }
