--- a/stylos/sass/body/_mixin.scss
+++ b/stylos/sass/body/_mixin.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    color: $tercer-color;
+    color: black;
     padding-bottom: 20px;
     font-size: 40px;
 }
