--- a/stylos/style.css
+++ b/stylos/style.css
@@ -405,7 +405,7 @@ button:hover {
 .spa {
   position: absolute;
   bottom: -40px;
-  left: -2px;
+  right: 18px;
   background: #979596;
   color: #fff;
   width: 300px;
@@ -422,7 +422,7 @@ span {
 .picture {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
   margin-top: 10px;
   padding-top: 20px;
 }
@@ -431,16 +431,26 @@ span {
   height: 200px;
   width: 350px;
   margin: 0 10px;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .informacion {
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
   list-style: none;
   font-weight: 600;
   padding-top: 10px;
+  margin: 10px;
+}
+
+.informacion2 {
+  list-style: none;
+  padding-bottom: 20px;
+  margin: 0 5px 0 15px;
 }
 
 .tittle {
