--- a/stylos/style.css
+++ b/stylos/style.css
@@ -73,7 +73,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 .layoutIndex {
@@ -177,6 +176,10 @@
   font-weight: 400;
   text-align: center;
   background-color: rgb(241, 240, 232);
+}
+
+#tarjetitas {
+  overflow-x: hidden;
 }
 
 .card {
